--- a/Numbers/Numbers.csproj
+++ b/Numbers/Numbers.csproj
@@ -37,7 +37,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\Mods\More Faction Interaction\Assemblies\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\RimWorld2059Win64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,7 +47,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\RimWorld2059Win64_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>
@@ -63,6 +63,7 @@
     <Compile Include="Numbers_Utility.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_Age.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_AnimalMilkFullness.cs" />
+    <Compile Include="PawnColumnWorkers\PawnColumnWorker_AnimalWildness.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_AnimalWoolGrowth.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_Backstory.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_Bleedrate.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_Skill.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_Stat.cs" />
     <Compile Include="PawnColumnWorkers\PawnColumnWorker_NeedsTreatment.cs" />
+    <Compile Include="PawnColumnWorkers\PawnColumnWorker_TameChance.cs" />
     <Compile Include="PawnTable_NumbersMain.cs" />
     <Compile Include="MainTabWindow_NumbersWildLife.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
